Replace valentine.png with valentine2.png

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
   <main class="card" id="card" aria-live="polite">
     <div class="image-wrap">
-      <img src="valentine.png" alt="Romantic moment" />
+      <img src="valentine2.png" alt="Romantic moment" />
     </div>
 
     <h1>Will you be my Valentine?</h1>
