Change animation from 'fall' to 'confettiFall'

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   top: -20px;
   left: var(--x);
   font-size: var(--fs);
-  animation: fall var(--dur) linear forwards;
+  animation: confettiFall var(--dur) linear forwards;
 
   transform: translateZ(0);
   backface-visibility: hidden;
